err/srtvoiceext.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.0.11.dist-info'...
Listing './lib/python3.5/site-packages/eyeD3'...
Compiling './lib/python3.5/site-packages/eyeD3/frames.py'...
***   File "./lib/python3.5/site-packages/eyeD3/frames.py", line 736
    except TypeError, excArg:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eyeD3/tag.py'...
***   File "./lib/python3.5/site-packages/eyeD3/tag.py", line 778
    except FrameException, ex:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eyeD3/utils.py'...
***   File "./lib/python3.5/site-packages/eyeD3/utils.py", line 87
    print prefix + msg;
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/eyeD3_pip-0.6.19.egg-info'...
Listing './lib/python3.5/site-packages/imageio'...
Listing './lib/python3.5/site-packages/imageio/core'...
Listing './lib/python3.5/site-packages/imageio/plugins'...
Listing './lib/python3.5/site-packages/imageio/resources'...
Listing './lib/python3.5/site-packages/imageio/resources/images'...
Listing './lib/python3.5/site-packages/imageio-2.1.2.egg-info'...
Listing './lib/python3.5/site-packages/moviepy'...
Listing './lib/python3.5/site-packages/moviepy/audio'...
Listing './lib/python3.5/site-packages/moviepy/audio/fx'...
Listing './lib/python3.5/site-packages/moviepy/audio/fx/all'...
Listing './lib/python3.5/site-packages/moviepy/audio/io'...
Listing './lib/python3.5/site-packages/moviepy/audio/tools'...
Listing './lib/python3.5/site-packages/moviepy/video'...
Listing './lib/python3.5/site-packages/moviepy/video/compositing'...
Listing './lib/python3.5/site-packages/moviepy/video/fx'...
Listing './lib/python3.5/site-packages/moviepy/video/fx/all'...
Listing './lib/python3.5/site-packages/moviepy/video/io'...
Listing './lib/python3.5/site-packages/moviepy/video/tools'...
Listing './lib/python3.5/site-packages/moviepy-0.2.3.2.dist-info'...
Listing './lib/python3.5/site-packages/mutagen'...
Listing './lib/python3.5/site-packages/mutagen/_senf'...
Listing './lib/python3.5/site-packages/mutagen/_tools'...
Listing './lib/python3.5/site-packages/mutagen/asf'...
Listing './lib/python3.5/site-packages/mutagen/id3'...
Listing './lib/python3.5/site-packages/mutagen/mp3'...
Listing './lib/python3.5/site-packages/mutagen/mp4'...
Listing './lib/python3.5/site-packages/mutagen-1.38.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pysrt'...
Listing './lib/python3.5/site-packages/pysrt-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shortuuid'...
Listing './lib/python3.5/site-packages/shortuuid-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/srtvoiceext'...
Listing './lib/python3.5/site-packages/srtvoiceext-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tqdm'...
Listing './lib/python3.5/site-packages/tqdm-4.11.2.dist-info'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
